<resources>
    <string name="app_name" translatable="false">geekHOME Asymptote</string>
    <string name="ssid">SSID</string>
    <string name="please_wait">Please wait…</string>
    <string name="sending_wifi_configuration">Sending WiFi configuration to the device… This may take up to 30 seconds.</string>
    <string name="cancel">Cancel</string>
    <string name="network_hidden">This network is hidden!</string>
    <string name="pair_device">Pair device</string>
    <string name="relay_x_is_off" formatted="false">Relay %d is off</string>
    <string name="relay_x_is_on" formatted="false">Relay %d is on</string>
    <string name="choose_color">Choose color</string>
    <string name="choose">Choose</string>
    <string name="remember_password_this_session">Remember password for this session</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="touch_configuration_title">Enter Wifi configuration details</string>
    <string name="touch_press_instruction">Press pairing button on target device for about 5 seconds. When LED diode starts blinking press "Next".</string>
    <string name="ask_for_support">Ask for support</string>
    <string name="ask_for_support_with_uid">Ask for support (user id: %s)</string>
    <string name="support_problem_configuring">Hi, can you help me to </string>
    <string name="send_email">Send email…</string>
    <string name="no_email_client_installed">There are no email clients installed.</string>
    <string name="step_no" formatted="false">Step %d of %d</string>
    <string name="done">Done</string>
    <string name="finished">Finished</string>
    <string name="device_paired" formatted="false">Device paired, IP: %s</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="note_discovery">Discovering geekHOME sensors</string>
    <string name="enter_wifi_password">Enter wifi password</string>
    <string name="refresh">Refresh</string>
    <string name="ota_update">OTA update</string>
    <string name="ota_starting_update_server">Starting update server, wait…</string>
    <string name="ota_waiting_for_device">Waiting for device to connect…</string>
    <string name="ota_int_progress">OTA update in progress, don\'t turn this phone/tablet off!</string>
    <string name="ota_notice">Please don\'t turn your phone or close the app when updating!</string>
    <string name="ota_server_error">Error! Cannot start OTA server!</string>
    <string name="ota_done">Done!</string>
    <string name="ota_failed">OTA update failed!</string>
    <string name="ota_device_updated" formatted="false">Device %s updated to version %d.%d</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="enter_sensor_name">Enter sensor name</string>
    <string name="cloud_only">Cloud only</string>
    <string name="ota_elapsed">Time elapsed</string>
    <string name="signal_lost">Signal lost</string>
    <string name="no_lan_sensors_found">No sensors found :(</string>
    <string name="sensors_found">Sensors found!</string>
    <string name="discovery_elapsed" formatted="false">Please wait… discovery ends in %d sec</string>
    <string name="old_google_play_services">Your device cannot connect to geekHOME cloud. Make sure latest version of Google Play Services is installed.</string>
    <string name="rationale_nowifi_cannot_detect_local_devices">It\'s impossible to discover devices in your local network when WiFi is off. You can still use cloud-only id to control devices that are bound to geekHOME cloud.</string>
    <string name="rationale_nowifi_adding_devices">It\'s impossible to add new devices when WiFi is off.</string>
    <string name="rationale_nowifi_ota_impossible">Updating devices \'Over the air\' is impossible when WiFi is off.</string>
    <string name="my_profile">My profile</string>
    <string name="profile_description">All details about your GeekHOME account!</string>
    <string name="register_via_email">Register via email</string>
    <string name="register_enter_email_and_password">Enter you email address and password</string>
    <string name="email">Email</string>
    <string name="enter_correct_email">Enter correct email address</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="minimum_password_length_is_8">Minimum password length is 8 characters</string>
    <string name="password_not_confirmed">Confirmed password does not match</string>
    <string name="change_email">Change email address</string>
    <string name="resent_verification_email">Resend verification email</string>
    <string name="error_linking_with_email" formatted="false">There\'s been problem with registering your account: %s.</string>
    <string name="error_signing_up" formatted="false">There\'s been problem with signing up: %s.</string>
    <string name="error_verifying_email" formatted="false">We were not able to verify your email address: %s.</string>
    <string name="error_cancelling_registration" formatted="false">We were not able to cancel your registration: %s.</string>
    <string name="error_resetting_password" formatted="false">We were not able to reset your password: %s.</string>
    <string name="reset_password_success" formatted="false">An email with password reset instruction has been sent to %s email address. Please check your email and click reset link.</string>
    <string name="email_verify_success" formatted="false">An email with verification code has been sent to %s email address. Please check your email and click verification link.</string>
    <string name="support_email_error" formatted="false">There\'s been a problem with requesting support: %s. Please send support request to %s manually.</string>
    <string name="verify_email_instruction">Please logout and sign in to finish registration process.</string>
    <string name="later">Later</string>
    <string name="change_password">Change password</string>
    <string name="enter_old_and_new_password">Enter your old and new password</string>
    <string name="old_password">Old password</string>
    <string name="old_password_required">Old password is required</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_has_been_changed">Password has been changed</string>
    <string name="error_changing_password" formatted="false">There\'s been problem with changing your password: %s.</string>
    <string name="error_changing_email" formatted="false">There\'s been problem with changing your email: %s.</string>
    <string name="enter_your_password_and_new_email">Enter your password and new email</string>
    <string name="not_verified">not verified</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_email">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="unable_to_signin" formatted="false">Unable to sign in: %s</string>
    <string name="terms_and_privacy">Terms and privacy policy</string>
    <string name="or">or</string>
    <string name="invalid_username_or_password">Invalid user name or password</string>
    <string name="choose_different_username">Please choose different username</string>
    <string name="finish_registration_process" formatted="false">Finish registration of %s email address by checking your inbox and clicking verification link.</string>
    <string name="cancel_registration">Cancel registration</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_instruction">Did you forgot  your password?</string>
    <string name="user_not_found">User not found!</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="scroll_to_bottom">… Scroll to bottom …</string>
    <string name="emergency_mode">Emergency mode</string>
    <string name="emergency_password">Emergency password</string>
    <string name="lock_device">Lock device</string>
    <string name="set_emergency_password_instruction">Emergency password help in securing your devices from unauthorized access and malware. Emergency password is shared between all geekHOME Asymptote devices in local network.</string>
    <string name="confirm_emergency_password">Confirm emergency password</string>
    <string name="set_password_and_secure_device">Set password and secure this device</string>
    <string name="remember_password_when_logged">Remember password when I\'m logged in</string>
    <string name="at_time">At</string>
    <string name="monday_shortcut">Mo</string>
    <string name="tuesday_shortcut">Tu</string>
    <string name="wednesday_shortcut">We</string>
    <string name="thursday_shortcut">Th</string>
    <string name="friday_shortcut">Fr</string>
    <string name="saturday_shortcut">Sa</string>
    <string name="sunday_shortcut">Su</string>
    <string name="at_every_day">Every</string>
</resources>