<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="vm"
            type="eu.geekhome.asymptote.viewmodel.TouchConfigurationViewModel"/>
    </data>

    <LinearLayout style="@style/Layout.MatchXY.Vertical">

        <include
            layout="@layout/actionbar_help"
            bind:vm="@{vm.actionBarModel}"/>

        <ScrollView
            style="@style/Layout.MatchX1"
            android:fillViewport="true">

            <eu.geekhome.asymptote.validation.controls.ValidationLinearLayout
                bind:validationContext="@{vm.validation}"
                style="@style/Touch.Background">

                <View style="@style/Common.OrangeSeparator.Horizontal"/>

                <TextView
                    style="@style/Common.Text.Big"
                    android:layout_marginTop="@dimen/common_medium_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/pair_device"/>

                <View style="@style/Common.OrangeSeparator.Horizontal.Thin"/>

                <View style="@style/Common.OrangeTriangle"/>

                <TextView
                    style="@style/Common.Text.Medium"
                    android:gravity="center_horizontal"
                    android:text="@string/touch_configuration_title"/>

                <LinearLayout
                    style="@style/Layout.MatchX1.Vertical"
                    android:layout_margin="@dimen/common_medium_padding">

                    <android.support.design.widget.TextInputLayout
                        style="@style/Layout.MatchX">

                        <android.support.design.widget.TextInputEditText
                            style="@style/Layout.MatchX"
                            android:enabled="false"
                            android:hint="@string/ssid"
                            android:maxLines="1"
                            android:text="@={vm.params.ssid}"/>
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        style="@style/Layout.Wrapped.Horizontal"
                        android:visibility="@{vm.params.hidden ? View.VISIBLE : View.GONE}">

                        <eu.geekhome.controls.SvgImageView
                            style="@style/Touch.WarningIcon"/>

                        <TextView
                            style="@style/Layout.Wrapped"
                            android:text="@string/network_hidden"/>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/Layout.MatchX">

                        <android.support.design.widget.TextInputEditText
                            style="@style/Layout.MatchX"
                            android:hint="@string/password"
                            android:text="@={vm.params.password}"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            app:validateRequiredField="@{@string/enter_wifi_password}"/>
                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        style="@style/Layout.MatchX"
                        android:checked="@={vm.rememberPassword}"
                        android:text="@string/remember_password_this_session"/>

                </LinearLayout>

                <View style="@style/Common.OrangeSeparator.Horizontal"/>

                <LinearLayout style="@style/ActionBar.BottomLayout">

                    <TextView
                        style="@style/Touch.Header.Text"
                        android:text="@{@string/step_no(1,3)}"/>

                    <Button
                        style="@style/Touch.NextButton"
                        android:onClick="@{vm.onNext}"
                        android:text="@string/next"/>
                </LinearLayout>

            </eu.geekhome.asymptote.validation.controls.ValidationLinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>