<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <import type="eu.geekhome.asymptote.validation.MinLengthParams"/>

        <variable
            name="vm"
            type="eu.geekhome.asymptote.viewmodel.SignUpDarkViewModel"/>
    </data>

    <eu.geekhome.asymptote.validation.controls.ValidationLinearLayout
        style="@style/Layout.MatchXY.Vertical"
        tools:validationContext="@{vm.validation}">

        <TextView
            style="@style/Layout.MatchX"
            android:layout_marginTop="@dimen/common_medium_padding"
            android:gravity="center_horizontal"
            android:text="@string/register_via_email"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <View style="@style/Common.OrangeSeparator.Horizontal.Thin"/>

        <View style="@style/Common.OrangeTriangle"/>

        <LinearLayout
            style="@style/Layout.MatchXY.Vertical"
            android:layout_margin="@dimen/common_medium_padding">

            <android.support.design.widget.TextInputLayout
                style="@style/Layout.MatchX">

                <android.support.design.widget.TextInputEditText
                    style="@style/Layout.MatchX"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={vm.email}"
                    app:validateEmail="@{@string/enter_correct_email}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Layout.MatchX">

                <android.support.design.widget.TextInputEditText
                    style="@style/Layout.MatchX"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={vm.password}"
                    app:validatePassword="@{MinLengthParams.create(@string/minimum_password_length_is_8, 8)}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Layout.MatchX">

                <android.support.design.widget.TextInputEditText
                    style="@style/Layout.MatchX"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={vm.confirmPassword}"
                    app:validatePasswordConfirmed="@{@string/password_not_confirmed}"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Common.Button.Orange"
                android:layout_gravity="end"
                android:onClick="@{vm.next}"
                android:text="@string/next"/>

        </LinearLayout>
    </eu.geekhome.asymptote.validation.controls.ValidationLinearLayout>
</layout>
