<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <import type="eu.geekhome.asymptote.validation.MinLengthParams"/>

        <variable
            name="vm"
            type="eu.geekhome.asymptote.viewmodel.LockViewModel"/>
    </data>


    <LinearLayout
        style="@style/Layout.MatchXY.Vertical">

        <include
            layout="@layout/actionbar_help"
            tools:vm="@{vm.actionBarModel}"/>

        <ScrollView
            style="@style/Layout.MatchX1"
            android:fillViewport="true">

            <LinearLayout style="@style/SensorEdit.Background">

                <View style="@style/Common.OrangeSeparator.Horizontal"/>

                <TextView
                    style="@style/Common.Text.Big"
                    android:layout_marginTop="@dimen/common_medium_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/lock_device"/>

                <View style="@style/Common.OrangeSeparator.Horizontal.Thin"/>

                <View style="@style/Common.OrangeTriangle"/>

                <TextView
                    style="@style/Profile.InstructionText"
                    android:text="@string/set_emergency_password_instruction"/>

                <LinearLayout
                    style="@style/Layout.MatchX.Vertical"
                    android:paddingEnd="@dimen/common_normal_padding"
                    android:paddingStart="@dimen/common_normal_padding">

                    <eu.geekhome.asymptote.validation.controls.ValidationLinearLayout
                        style="@style/Layout.MatchX1.Vertical"
                        android:layout_margin="@dimen/common_medium_padding"
                        tools:validationContext="@{vm.validation}">


                        <android.support.design.widget.TextInputLayout
                            style="@style/Layout.MatchX">

                            <android.support.design.widget.TextInputEditText
                                style="@style/Layout.MatchX"
                                android:hint="@string/emergency_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:text="@={vm.password}"
                                app:validatePassword="@{MinLengthParams.create(@string/minimum_password_length_is_8, 8)}"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/Layout.MatchX">

                            <android.support.design.widget.TextInputEditText
                                style="@style/Layout.MatchX"
                                android:hint="@string/confirm_emergency_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:text="@={vm.confirmPassword}"
                                app:validatePasswordConfirmed="@{@string/password_not_confirmed}"/>
                        </android.support.design.widget.TextInputLayout>
                    </eu.geekhome.asymptote.validation.controls.ValidationLinearLayout>

                    <CheckBox
                        style="@style/Layout.MatchX"
                        android:checked="@={vm.rememberPassword}"
                        android:text="@string/remember_password_when_logged"
                        android:visibility="@{vm.emergency ? View.GONE : View.VISIBLE}"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <View style="@style/Common.OrangeSeparator.Horizontal"/>

        <LinearLayout style="@style/ActionBar.BottomLayout">

            <Button
                style="@style/Touch.NextButton"
                android:onClick="@{() -> vm.lock()}"
                android:text="@string/set_password_and_secure_device"/>
        </LinearLayout>
    </LinearLayout>


</layout>